# Oasis

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  HowToUseOASIS.txt  LICENSE  README.md  Troubleshoot.md  cmake-format.py
.github/ISSUE_TEMPLATE/: application-bug-report.md  library-bug-report.md
.github/workflows/: build-npm-package.yml  clang-format.yml  cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml  code-coverage-comment.yml  code-coverage.yml  doxygen.yml  format-cmake.yml  valgrind.yml
bindings/js/: CMakeLists.txt  package-lock.json  package.json
bindings/js/src/: bindings.cpp
bindings/js/tests/: index.ts
cli/: CMakeLists.txt  main.cpp
cmake/: FetchBoost.cmake  FetchEigen.cmake  FetchLinenoise.cmake
cmake/FetchEigen/: CMakeLists.txt
cmake/FetchTaskflow/: CMakeLists.txt
cmake/FetchTinyxml2/: CMakeLists.txt
docs/: PALM.bnf  Troubleshoot.md  header.html
docs/graphs/: quadratic_example.dot
extras/: CMakeLists.txt
extras/include/Oasis/: FromString.hpp  InFixSerializer.hpp  MathMLSerializer.hpp
extras/src/: FromString.cpp  InFixSerializer.cpp  MathMLSerializer.cpp
extras/tests/: CMakeLists.txt  InFixTests.cpp  MathMLTests.cpp
gui/: CMakeLists.txt  InputPreprocessor.cpp  InputPreprocessor.hpp  main.cpp
gui/assets/: index.html  index.js
gui/cmake/Embed/: Embed.cmake  EmbedTemplate.cpp.in  EmbedTemplate.hpp.in  README.md
gui/components/EquationViewer/: EquationViewer.cpp  EquationViewer.hpp
gui/components/EquationViewer/web-content/: package-lock.json  package.json
gui/components/EquationViewer/web-content/src/: App.tsx  main.tsx
gui/components/EquationViewer/web-content/src/components/: QueryEquation.tsx  ResponseEquation.tsx
gui/components/FunctionBuilder/: FunctionBuilder.cpp  FunctionBuilder.hpp
gui/components/KeypadButton/: KeypadButton.cpp  KeypadButton.hpp
gui/views/: ArithmeticView.cpp  ArithmeticView.hpp  DefaultView.cpp  DefaultView.hpp
gui/views/DefaultView/: DefaultView.cpp  DefaultView.hpp
gui/views/PreferencesPanel/: PreferencesPanel.cpp  PreferencesPanel.hpp
include/: CMakeLists.txt
include/Oasis/: Add.hpp  Arccos.hpp  Arccosine.hpp  Arcsin.hpp  Arcsine.hpp  Arctan.hpp  BinaryExpression.hpp  BoundedBinaryExpression.hpp  BoundedExpression.hpp  BoundedUnaryExpression.hpp  Concepts.hpp  Cos.hpp  CosH.hpp  Cosecant.hpp  Cosine.hpp  Cotan.hpp  DefiniteIntegral.hpp  Derivative.hpp  Differentiate.hpp  DifferentiateVisitor.hpp  Divide.hpp  EulerNumber.hpp  Exponent.hpp  Expression.hpp  FromString.hpp  FwdDecls.hpp  GlobalUnitGraph.hpp  GreaterThan.hpp  Imaginary.hpp  Integral.hpp  Integrate.hpp  LeafExpression.hpp  LessThan.hpp  Linear.hpp  LinearEquation.hpp  Log.hpp  Magnitude.hpp  MatchCast.hpp  MathUtils.hpp  Matrix.hpp  (+25 more)
io/: CMakeLists.txt
io/include/Oasis/: FromPALM.hpp  FromString.hpp  InFixSerializer.hpp  LatexSerializer.hpp  MathMLSerializer.hpp  PALMSerializer.hpp  TeXSerializer.hpp
io/src/: FromPALM.cpp  FromString.cpp  InFixSerializer.cpp  LatexSerializer.cpp  MathMLSerializer.cpp  PALMConst.hpp  PALMConsts.hpp  PALMHelper.cpp  PALMHelper.hpp  PALMSerializer.cpp  PALMSpec.hpp  PALMTokenizer.cpp  PALMTokenizer.hpp  PALMTypes.hpp  TeXSerializer.cpp
io/tests/: CMakeLists.txt  InFixTests.cpp  LatexTests.cpp  MathMLTests.cpp  PALMTests.cpp  TeXTests.cpp
scripts/: format
src/: Add.cpp  Arccos.cpp  Arccosine.cpp  Arcsin.cpp  Arcsine.cpp  Arctan.cpp  BinaryExpression.cpp  CMakeLists.txt  Cos.cpp  CosH.cpp  Cosecant.cpp  Cosine.cpp  Cotan.cpp  DefiniteIntegral.cpp  Derivative.cpp  Differentiate.cpp  DifferentiateVisitor.cpp  Divide.cpp  EulerNumber.cpp  Exponent.cpp  Expression.cpp  FromString.cpp  GlobalUnitGraph.cpp  GreaterThan.cpp  Imaginary.cpp  Integral.cpp  Integrate.cpp  LessThan.cpp  Linear.cpp  Log.cpp  Magnitude.cpp  Matrix.cpp  Multiply.cpp  Negate.cpp  Pi.cpp  Power.cpp  Real.cpp  Secant.cpp  SimplifyVisitor.cpp  Sin.cpp  (+10 more)
src/MathML/: Util.cpp  Util.hpp
src/Parsers/SExpression/: SExpression.cpp  SExpression.hpp
tests/: AddTests.cpp  ApproximationTests.cpp  BinaryExpressionTests.cpp  CMakeLists.txt  Common.hpp  DefiniteIntegralTests.cpp  DifferentiateTests.cpp  DivideTests.cpp  ExponentTests.cpp  InFixTests.cpp  InsertTests.cpp  IntegrateTests.cpp  LinearTests.cpp  LogTests.cpp  MagnitudeTests.cpp  MathMLTests.cpp  MatrixTests.cpp  MultiplyTests.cpp  NegateTests.cpp  PolynomialTests.cpp  SExpressionTests.cpp  SineTests.cpp  SubtractTests.cpp  TrigonomicTests.cpp  UnaryExpressionTests.cpp  test.cpp
